--- a/Synth.vcxproj
+++ b/Synth.vcxproj
@@ -76,7 +76,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\giova\Documents\Visual Studio Code Repo\Synthesizer\synth-OneLoneCoder</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\giova\source\repos\Synth</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
